packages/ag-charts-community/src/chart/toolbar/toolbarStyles.css
.ag-charts-toolbar {
    align-items: center;
    background: none;
    border: none;
    display: flex;
    flex-wrap: nowrap;
    opacity: 1;
    position: absolute;
    transform: translateY(0);
    transition:
        opacity 0.2s ease-in-out,
        transform 0.2s ease-in-out;
}

.ag-charts-toolbar--hidden,
.ag-charts-toolbar--prevent-flash {
    visibility: hidden;
}

.ag-charts-toolbar--floating-hidden {
    opacity: 0;
    transition: opacity 0.4s ease-in-out;
}

.ag-charts-toolbar--small {
    --ag-charts-toolbar-size: var(--ag-charts-toolbar-size-small);
    --ag-charts-toolbar-font-size: var(--ag-charts-toolbar-font-size-small);
    --ag-charts-toolbar-button-padding: var(--ag-charts-toolbar-button-padding-small);
}

.ag-charts-toolbar--top,
.ag-charts-toolbar--bottom {
    flex-direction: row;
    width: 100%;
}

.ag-charts-toolbar--left,
.ag-charts-toolbar--right {
    flex-direction: column;
}

.ag-charts-toolbar--floating,
.ag-charts-toolbar--floating-top,
.ag-charts-toolbar--floating-bottom {
    background: none;
    border: none;
    flex-direction: row;
    pointer-events: none;
    width: 100%;
}

.ag-charts-toolbar--floating {
    padding: 0;
    width: auto;
    z-index: var(--ag-charts-layer-toolbar);
}

.ag-charts-toolbar--floating-top {
    height: calc(var(--ag-charts-toolbar-size) + 10px);
    padding-top: 10px;
}

.ag-charts-toolbar--floating-bottom {
    height: calc(var(--ag-charts-toolbar-size) + 10px);
    padding-bottom: 10px;
}

.ag-charts-toolbar__align {
    display: flex;
    flex-direction: inherit;
    flex-wrap: inherit;
    gap: var(--ag-charts-toolbar-gap);
    max-width: 100%;
    width: 100%;
}

.ag-charts-toolbar__align--start {
    justify-content: start;
}

.ag-charts-toolbar__align--center {
    justify-content: center;
}

.ag-charts-toolbar__align--end {
    justify-content: end;
}

.ag-charts-toolbar__align--center,
.ag-charts-toolbar__align--end {
    margin-left: auto;
}

.ag-charts-toolbar--left .ag-charts-toolbar__align--center,
.ag-charts-toolbar--left .ag-charts-toolbar__align--end,
.ag-charts-toolbar--right .ag-charts-toolbar__align--center,
.ag-charts-toolbar--right .ag-charts-toolbar__align--end {
    margin-left: 0;
    margin-top: auto;
}

.ag-charts-toolbar--floating-top .ag-charts-toolbar__align,
.ag-charts-toolbar--floating-bottom .ag-charts-toolbar__align {
    transition: transform 0.4s ease-in-out;
    width: auto;
}

.ag-charts-toolbar__section {
    display: inherit;
    flex-direction: inherit;
    flex-wrap: inherit;
    justify-content: inherit;
    max-width: inherit;
    width: inherit;
}

.ag-charts-toolbar__button {
    align-items: center;
    background: var(--ag-charts-toolbar-background-color);
    border: var(--ag-charts-toolbar-border);
    color: var(--ag-charts-toolbar-foreground-color);
    display: flex;
    font: var(--ag-charts-toolbar-font-size) var(--ag-charts-font-family);
    justify-content: center;
    margin: 0 0 0 -1px;
    min-height: var(--ag-charts-toolbar-size);
    min-width: var(--ag-charts-toolbar-size);
    padding: var(--ag-charts-toolbar-button-padding);
    pointer-events: all;
    position: relative;
    transition:
        background-color 0.25s ease-in-out,
        border-color 0.25s ease-in-out,
        color 0.25s ease-in-out;
    white-space: nowrap;
}

.ag-charts-toolbar__button[data-toolbar-group='ranges'] {
    padding: var(--ag-charts-toolbar-button-padding) calc(var(--ag-charts-toolbar-button-padding) * 1.5);
}

.ag-charts-toolbar--top,
.ag-charts-toolbar--bottom,
.ag-charts-toolbar--floating,
.ag-charts-toolbar--floating-top,
.ag-charts-toolbar--floating-bottom {
    .ag-charts-toolbar__button:nth-child(1 of :not(.ag-charts-toolbar__button--hidden-toggled)) {
        border-bottom-left-radius: var(--ag-charts-button-radius);
        border-top-left-radius: var(--ag-charts-button-radius);
        margin: 0;
    }

    .ag-charts-toolbar__button:nth-last-child(1 of :not(.ag-charts-toolbar__button--hidden-toggled)) {
        border-bottom-right-radius: var(--ag-charts-button-radius);
        border-top-right-radius: var(--ag-charts-button-radius);
    }
}

.ag-charts-toolbar--left,
.ag-charts-toolbar--right {
    .ag-charts-toolbar__button {
        border-radius: 0;
        margin: -1px 0 0 0;
        max-width: 100%;
    }

    .ag-charts-toolbar__button:nth-child(1 of :not(.ag-charts-toolbar__button--hidden-toggled)) {
        border-top-left-radius: var(--ag-charts-button-radius);
        border-top-right-radius: var(--ag-charts-button-radius);
        margin: 0;
    }

    .ag-charts-toolbar__button:nth-last-child(1 of :not(.ag-charts-toolbar__button--hidden-toggled)) {
        border-bottom-left-radius: var(--ag-charts-button-radius);
        border-bottom-right-radius: var(--ag-charts-button-radius);
    }
}

.ag-charts-toolbar__button--hidden-value,
.ag-charts-toolbar__button--hidden-toggled {
    display: none;
}

.ag-charts-toolbar__button:hover {
    background: var(--ag-charts-toolbar-hover-color);
    z-index: 1;
}

.ag-charts-toolbar__button:focus-visible {
    border-color: var(--ag-charts-toolbar-focus-color);
    box-shadow: var(--ag-charts-focus-border-shadow);
    z-index: 1;
}

.ag-charts-toolbar__button.ag-charts-toolbar__button--active {
    background: var(--ag-charts-toolbar-active-background-color);
    border-color: var(--ag-charts-toolbar-active-color);
    color: var(--ag-charts-toolbar-active-color);
    z-index: 1;
}

.ag-charts-toolbar__button[aria-disabled='true'] {
    background: var(--ag-charts-toolbar-disabled-background-color);
    color: var(--ag-charts-toolbar-disabled-foreground-color);
}

.ag-charts-toolbar__button:not([aria-disabled='true']) {
    cursor: pointer;
}

.ag-charts-toolbar__button--fill-visible::after {
    content: '';
    display: block;
    position: absolute;
    bottom: 3px;
    left: 5px;
    right: 5px;
    height: 4px;
    border-radius: 99px;
    box-shadow: inset 0 0 0 1px color-mix(in srgb, var(--ag-charts-foreground-color) 10%, transparent);
    background: var(--fill);
}

.ag-charts-toolbar__button--fill-visible[aria-disabled='true']::after {
    filter: grayscale(1);
    opacity: 0.5;
}

.ag-charts-toolbar__icon + .ag-charts-toolbar__label {
    margin-left: var(--ag-charts-toolbar-gap);
}

.ag-charts-toolbar__icon,
.ag-charts-toolbar__label {
    pointer-events: none;
}

